# osky

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  pyproject.toml  sales.txt
alembic/: env.py
alembic/versions/: 2023_12_20_0241-8bef416ef9e8_first_migration.py  2024_03_10_1426-9d3e254ecb05_.py
infra/server/: docker-compose.yml
src/domain/entities/: __init__.py  base_model.py  base_schema.py  short_annotate.py
src/domain/entities/profile/: __init__.py
src/domain/entities/profile/models/: avatar_model.py  profile_model.py
src/domain/entities/profile/schemas/: profile_schemas.py
src/domain/entities/publication/: __init__.py
src/domain/entities/publication/comment/: __init__.py
src/domain/entities/publication/files/: __init__.py
src/domain/entities/publication/post/: __init__.py
src/domain/entities/user/: __init__.py
src/domain/entities/user/avatar/: __init__.py
src/domain/entities/user/models/: user_model.py
src/domain/mixins/entities/: __init__.py  profile_mixin.py  user_mixin.py  user_mixins.py
src/services/: __init__.py  settings_schemas.py
src/services/alembic/: base.py
src/services/database/app/: config.py  database.py
src/services/database/repository/: __init__.py  base_repository.py
src/services/db/app/: config.py  database.py
src/services/db/repository/: __init__.py  base_repository.py
src/services/web/: config.py  main.py  server.py
src/services/web/app/: config.py
src/services/web/routers/: __init__.py  main_router.py
src/services/web/routes/: __init__.py  routes.py
(+30 files in other folders)
